--- a/1-Elementos HTML/index.html
+++ b/1-Elementos HTML/index.html
@@ -1,12 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+<h1> Hello World</h1>
+<h2> Hello World</h2>
+<h3> Hello World</h3>
+<h4> Hello World</h4>
+<h5> Hello World</h5>
+<h6> Hello World</h6>
+
+ <p>Ola Mundo</p>
+
+<ol>
+    <li>Item A</li>
+    <li>Item B</li>
+    <li>Item C</li>
+</ol>
+
+<ul style="list-style: none;">
+    <li>Item A</li>
+    <li>Item B</li>
+    <li>Item C</li>
+</ul>
+
+<a href="https://www.youtube.com/">Clique Aqui</a>
+<br>
+<br>
+<button>Click Here</button> 
+<br>
+<img src="./assets/PastorAlemao.webp" alt="Foto de Cachorro" width="400">
