--- a/2-Formulario/index.html
+++ b/2-Formulario/index.html
@@ -5,28 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forms</title>
     <style>
-        form{
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
+
+        .boxtext{
+            height: 100px;
+            
         }
-        button{
-            margin-top: 10px;
-        }
-        .container{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
+
+    input {
+    display: block;
+    width: 100%;
+    padding: 10px 12px;
+    font: inherit;
+    border: none;
+    line-height: 1.6;
+    box-sizing: border-box;
+}
+
     </style>
 </head>
 <body>
     <div class="container">
     <form action="submit" method="post">
-        <label for="login">Login</label>
-        <input type="text" placeholder="Nome de Usuario">
-        <input type="password" placeholder="Senha">
+        <input type="text" placeholder="First Name">
+        <input type="text" placeholder="Last Name">
+        <input type="text" placeholder="Email">
+        <input type="number" placeholder="Phone">
+        <input class="boxtext" type="text" placeholder="Type you message here...">
+
     </form>
     <button type="submit">Submit</button>
 </div>
